<?xml version ="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width ="match_parent"
    android:layout_height ="match_parent"
    android:orientation ="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width ="match_parent"
        android:layout_height ="wrap_content"
        android:gravity="center"
        android:orientation ="horizontal">
        <ImageView
            android:layout_width ="36dp"
            android:layout_height ="36dp"
            android:src="@drawable/ic_thermostat_24" />
        <TextView
            android:layout_width ="wrap_content"
            android:layout_height ="wrap_content"
            android:layout_marginVertical ="16dp"
            android:text="@string/titulo"
            android:textAlignment ="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
    <EditText
        android:id="@+id/etTemperature"
        android:layout_width ="match_parent"
        android:layout_height ="wrap_content"
        android:hint="@string/hint_temperatura"
        android:inputType="numberDecimal" />
    <RadioGroup
        android:id="@+id/rgTipoConversao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">
        <RadioButton
            android:id="@+id/rbCelsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/celsius_para_fahrenheit" />
        <RadioButton
            android:id="@+id/rbFahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit_para_celsius" />
    </RadioGroup>
    <Button
        android:id="@+id/btnConvert"
        android:layout_width ="match_parent"
        android:layout_height ="wrap_content"
        android:text="@string/botao_converter" />
    <TextView
        android:id="@+id/tvResult"
        android:layout_width ="match_parent"
        android:layout_height ="wrap_content"
        android:paddingTop ="16dp"
        android:textAlignment ="center"
        android:textSize="96sp"
        android:textStyle="bold"
        tools:text="32" />
</LinearLayout >